data/derived/fa15/progs/unify/prog3962.ml.out
Characters 38-55:
  let stringOfList f l = "[" ^ List.map((sepConcat ";" l) l) ^ "]";;
                                        ^^^^^^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
